Fixing changing with on overflow-y for the content of the menu.

--- a/www/src/view/sim_page/css/collapse_menu.css
+++ b/www/src/view/sim_page/css/collapse_menu.css
@@ -275,6 +275,7 @@ input[type="number"]::-webkit-outer-spin-button, input[type="number"]::-webkit-i
     flex-wrap: nowrap;
     justify-content: flex-start;
     align-items: center;
+    width: 400px;
 }
 
 .feature-hotkeys {
